# storage/api-docs/api-docs.json
@@ -230,6 +230,91 @@
                 }
             }
         },
+        "/api/orders": {
+            "post": {
+                "tags": [
+                    "order"
+                ],
+                "summary": "Create new order",
+                "description": "Creates one new order",
+                "operationId": "storeOrders",
+                "requestBody": {
+                    "description": "Enter order Data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "note",
+                                    "ordered_at"
+                                ],
+                                "properties": {
+                                    "note": {
+                                        "type": "string",
+                                        "example": "Is super important!"
+                                    },
+                                    "ordered_at": {
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "2000-02-02"
+                                    },
+                                    "orderProducts": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "product_id": {
+                                                    "type": "integer",
+                                                    "example": "1"
+                                                },
+                                                "volume": {
+                                                    "type": "integer",
+                                                    "example": "10"
+                                                },
+                                                "price": {
+                                                    "type": "integer",
+                                                    "example": "100"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "collectionFormat": "multi"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "order": {
+                                            "$ref": "#/components/schemas/OrderResource"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/orderProducts": {
             "get": {
                 "tags": [
@@ -740,25 +825,6 @@
                     "description": "Enter shop Data",
                     "required": true,
                     "content": {
-                        "multipart/form-data": {
-                            "schema": {
-                                "required": [
-                                    "name",
-                                    "link"
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "type": "string",
-                                        "example": "Digitec"
-                                    },
-                                    "link": {
-                                        "type": "string",
-                                        "example": "www.digitec.ch"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        },
                         "application/json": {
                             "schema": {
                                 "required": [
